--- a/src/build
+++ b/src/build
@@ -2,8 +2,8 @@
 echo "build PWD: $PWD"
 DXPM_CURRENT_PACKAGE_NAME="$1"
 if [ "$DXPM_CURRENT_PACKAGE_NAME" = "" ]; then
-  DXPM_CURRENT_PACKAGE_NAME="$($PWD/bin/getprojectname)"
+  DXPM_CURRENT_PACKAGE_NAME="$($PWD/bin/qfpm/getprojectname)"
 fi
 echo "[+] converting source for $DXPM_CURRENT_PACKAGE_NAME"
-sfdx force:source:convert -d "./src" -n "$DXPM_CURRENT_PACKAGE_NAME" && wait
+sfdx force:source:convert -d "./force-app" -n "$DXPM_CURRENT_PACKAGE_NAME" && wait
 echo "[+] finished converting source for $DXPM_CURRENT_PACKAGE_NAME"
