--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "qfpm",
-    "version": "1.1.0",
-    "description": "installs the NPM SFDX Package Dependancy Resolution Proof of Concept scripts",
+    "version": "1.1.1",
+    "description": "Salesforce package management tool set for mananging dependencies between packages",
     "main": "index.js",
     "keywords": [
         "salesforce",
