added man to package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.1.1",
     "description": "Salesforce package management tool set for mananging dependencies between packages",
     "main": "index.js",
+    "man": "./README.md",
     "keywords": [
         "salesforce",
         "package",
