--- a/.github/workflows/qfpmtest.yml
+++ b/.github/workflows/qfpmtest.yml
@@ -26,6 +26,7 @@ jobs:
       #git clone fflib sample
       - run: git clone https://github.com/gussamer/fflib-apex-common-samplecode.git
       - run: cd fflib-apex-common-samplecode
+      - run: echo $PWD
       - run: npm run setup
       #run test
       - run: npm run test
