arghh github yaml

--- a/.github/workflows/qfpmtest.yml
+++ b/.github/workflows/qfpmtest.yml
@@ -28,7 +28,7 @@ jobs:
         run: git clone https://github.com/gussamer/fflib-apex-common-samplecode.git
       - name: Move Into FFLIB Dir
         run: cd fflib-apex-common-samplecode
-        shell: {0}
+        shell: "{0}"
       - run: echo $PWD
       - run: ls -lha
       - name: Setup Devlopment Env
