arghh github yaml

--- a/.github/workflows/qfpmtest.yml
+++ b/.github/workflows/qfpmtest.yml
@@ -27,8 +27,9 @@ jobs:
       - name: Clone FFLIB Sample Code
         run: git clone https://github.com/gussamer/fflib-apex-common-samplecode.git
       - name: Move Into FFLIB Dir
-        run: fflib-apex-common-samplecode
-        shell: "cd {0}"
+        run: cd fflib-apex-common-samplecode
+      - run: echo $PWD
+      - run: export PWD="$PWD/fflib-apex-common-samplecode"
       - run: echo $PWD
       - run: ls -lha
       - name: Setup Devlopment Env
