arghh github yaml??

--- a/.github/workflows/qfpmtest.yml
+++ b/.github/workflows/qfpmtest.yml
@@ -26,6 +26,9 @@ jobs:
       #git clone fflib sample
       - name: Clone FFLIB Sample Code
         run: git clone https://github.com/gussamer/fflib-apex-common-samplecode.git
+      - name: Install Depends
+        run: npm install
+        working-directory: ./fflib-apex-common-samplecode
       - name: Setup Devlopment Env
         run: npm run setup
         working-directory: ./fflib-apex-common-samplecode
