--- a/.github/workflows/qfpmtest.yml
+++ b/.github/workflows/qfpmtest.yml
@@ -28,6 +28,7 @@ jobs:
         run: git clone https://github.com/apex-enterprise-patterns/fflib-apex-common-samplecode.git
       - name: Setup Package.json
         run: npm init -y
+        working-directory: ./fflib-apex-common-samplecode
       - name: Install QFPM
         run: npm install qfpm --save
         working-directory: ./fflib-apex-common-samplecode
