--- a/.github/workflows/qfpmtest.yml
+++ b/.github/workflows/qfpmtest.yml
@@ -16,13 +16,13 @@ jobs:
           ref: ${{github.event.pull_request.head.ref}}
           repository: ${{github.event.pull_request.head.repo.full_name}}
       - name: Install SFDX CLI and authorize DevHub
-        uses: apex-enterprise-patterns/setup-sfdx@v1 #We're using a fork of https://github.com/sfdx-actions/setup-sfdx for safety
+        uses: apex-enterprise-patterns/setup-sfdx@v2 #We're using a fork of https://github.com/sfdx-actions/setup-sfdx for safety
         with:
           sfdx-auth-url: ${{ secrets.DEVHUB_SFDXURL }}
-      - run: sfdx force:config:set defaultdevhubusername=SFDX-ENV -g #Even though the setup-sfdx action uses --setdefaultdevhubusername, it doesn't seem to stick since it uses --setdefaultusername so we brute force it here
-      #- run: sfdx force:org:create -f ./config/project-scratch-def.json --setdefaultusername -d 1
-      #- run: sfdx force:source:push
-      #- run: sfdx force:apex:test:run -w 5
+      - run: sf force config set target-dev SFDX-ENV -g #Even though the setup-sfdx action uses --setdefaultdevhubusername, it doesn't seem to stick since it uses --setdefaultusername so we brute force it here
+      #- run: sf force org create -f ./config/project-scratch-def.json --setdefaultusername -d 1
+      #- run: sf force source push
+      #- run: sf force apex test run -w 5
       #git clone fflib sample
       - name: Clone FFLIB Sample Code
         run: git clone https://github.com/apex-enterprise-patterns/fflib-apex-common-samplecode.git
@@ -43,7 +43,7 @@ jobs:
         run: npm run test
         working-directory: ./fflib-apex-common-samplecode
       - name: Destroy scratch org
-        #run: sfdx force:org:delete -p
+        #run: sf force apex test run
         run: npm run clean
         working-directory: ./fflib-apex-common-samplecode
         if: always()
